Alterando yml para progress estava errado estava progess

--- a/cucumber.yaml
+++ b/cucumber.yaml
@@ -1,5 +1,5 @@
 ---
 default: --format pretty -p html
-ci: --format progess -p json
+ci: --format progress -p json
 json: --format json --out=logs/features.json
 html: --format html --out=logs/features.html
